--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,12 @@
 [metadata]
 name = vault-cli
-description = "CLI tool for hashicorp vault"
+description = CLI tool for hashicorp vault
 version = 0.1.0
 author = ylachiver
 author_email = yann.lachiver@people-doc.com
 url = https://github.com/peopledoc/vault-cli
 long_description = file: README.md
+long_description_content_type = text/markdown
 keywords = hashicorp vault cli
 classifiers =
     Development Status :: 4 - Beta
