Add license in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ url = https://github.com/peopledoc/vault-cli
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = hashicorp vault cli
+license = Apache Software License
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
