--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = vault-cli
 description = CLI tool for hashicorp vault
-version = 0.1.0
+version = 0.2.0
 author = ylachiver
 author_email = yann.lachiver@people-doc.com
 url = https://github.com/peopledoc/vault-cli
@@ -35,6 +35,7 @@ hvac =
     hvac
 
 dev =
+    twine
 
 test =
     pytest
