Adding a 100% unit test coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,13 @@ dev =
 test =
     pytest
     pytest-mock
+    requests-mock
+    pytest-cov
+    pytest-click
 
 [bdist_wheel]
 universal = 1
 
+
+[tool:pytest]
+addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv
