--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py36}-{unit}-tests,check-lint
+    {py27,py36}-{integration,unit}-tests,check-lint
 
 [testenv]
 usedevelop = True
@@ -10,3 +10,4 @@ extras =
 commands =
     pip freeze -l
     unit-tests: pytest tests/unit
+    integration-tests: pytest tests/integration
