--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = vault-cli
 description = CLI tool for hashicorp vault
-version = 0.3.1
+version = 0.3.2dev0
 author = ylachiver
 author_email = yann.lachiver@people-doc.com
 url = https://github.com/peopledoc/vault-cli
