define default localhost vault as non https

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
     requests
     Click
     pyyaml
+    backports.functools_lru_cache; python_version<"3.2"
 
 [options.entry_points]
 console_scripts =
