SNI compatibility is built directly into requirement environmental markers

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,9 @@ install_requires =
     Click
     pyyaml
     backports.functools_lru_cache; python_version<"3.2"
+    # SNI support
+    pyOpenSSL; python_version<"2.7.9"
+    idna; python_version<"2.7.9"
 
 [options.entry_points]
 console_scripts =
@@ -44,11 +47,6 @@ test =
     requests-mock
     pytest-cov
     pytest-click
-
-# Backport of SNI support for old OSes (like Debian Wheezy)
-sni =
-    pyOpenSSL
-    idna
 
 [bdist_wheel]
 universal = 1
