--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ include_package_data = True
 packages = find:
 install_requires =
     requests
-    Click
+    Click>=7.0
     pyyaml
     backports.functools_lru_cache; python_version<"3.2"
     # SNI support
