Officially add linting
- Add 3.7 tests
- Add lint target in CI
- Add linting and lint checks in tox
- Add related dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,27 @@ services:
 matrix:
   include:
 
+  - python: 2.7
+    env: TOX_ENV=py27-unit-tests COVERAGE_FLAG=unit
+
+  - python: 2.7
+    env: TOX_ENV=py27-integration-tests COVERAGE_FLAG=integration
+
   - python: 3.6
     env: TOX_ENV=py36-unit-tests COVERAGE_FLAG=unit
 
   - python: 3.6
     env: TOX_ENV=py36-integration-tests COVERAGE_FLAG=integration
 
-  - python: 2.7
-    env: TOX_ENV=py27-unit-tests COVERAGE_FLAG=unit
+  - python: 3.7
+    env: TOX_ENV=py37-unit-tests COVERAGE_FLAG=unit
 
-  - python: 2.7
-    env: TOX_ENV=py27-integration-tests COVERAGE_FLAG=integration
+  - python: 3.7
+    env: TOX_ENV=py37-integration-tests COVERAGE_FLAG=integration
+
+  - python: 3.7
+    env: TOX_ENV=check-lint
+
 
 before_install:
   - "if [ $COVERAGE_FLAG = integration ]; then ./dev-env; fi"
