--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,22 @@ commands =
     pip freeze -l
     unit-tests: pytest tests/unit
     integration-tests: pytest tests/integration
+
+[testenv:check-lint]
+extras =
+    lint
+    hvac
+ignore_errors=true
+commands =
+    mypy vault_cli
+    flake8 .
+    isort --check-only
+    black --check .
+
+
+[testenv:format]
+extras =
+    dev
+commands =
+    isort -y
+    black .
