--- a/setup.cfg
+++ b/setup.cfg
@@ -13,9 +13,11 @@ classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
 
 [options]
 zip_safe = True
@@ -40,6 +42,8 @@ hvac =
 
 dev =
     twine
+    black
+    isort
 
 test =
     pytest
@@ -48,8 +52,24 @@ test =
     pytest-cov
     pytest-click
 
+lint =
+    mypy
+    flake8
+    black
+    isort
+
+
 [bdist_wheel]
 universal = 1
+
+
+[isort]
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+line_length=88
+not_skip = __init__.py
 
 
 [tool:pytest]
