--- a/setup.cfg
+++ b/setup.cfg
@@ -70,3 +70,14 @@ not_skip = __init__.py
 
 [tool:pytest]
 addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv
+
+
+[mypy-backports.functools_lru_cache.*,setuptools.*,urllib3.*,hvac.*]
+ignore_missing_imports = True
+
+
+[flake8]
+ignore = E203, E266, E501, W503
+max-line-length = 80
+max-complexity = 18
+select = B,C,E,F,W,T4,B9
