Fix travis for Python 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 # Config file for automatic testing at travis-ci.org
 language: python
 cache: pip
-
+sudo: required
+dist: xenial
 services:
   - docker
 
