--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 version: '2'
 services:
   vault:
-    image: "vault"
-    command: vault server -dev
+    image: vault
+    command: /var/vault/vault-startup.sh
     environment:
-      VAULT_ADDR: http://127.0.0.1:8200
-      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
+      SKIP_SETCAP: 1
       VAULT_DEV_ROOT_TOKEN_ID: some-token
-      VAULT_LOCAL_CONFIG: >
-        {
-          "disable_mlock": true
-        }
     ports:
     - "8200:8200"
+    - "8443:8443"
+    volumes:
+    - ./dev_docker_config:/var/vault/:ro
