--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,10 @@ console_scripts =
 
 [options.extras_require]
 
+# If you plan to import the testing module
+testing =
+    pytest
+
 dev =
     twine
     black
@@ -65,7 +69,7 @@ not_skip = __init__.py
 addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv
 
 
-[mypy-backports.functools_lru_cache.*,setuptools.*,urllib3.*,hvac.*]
+[mypy-backports.functools_lru_cache.*,setuptools.*,urllib3.*,hvac.*,pytest.*]
 ignore_missing_imports = True
 
 
