--- a/setup.cfg
+++ b/setup.cfg
@@ -78,3 +78,7 @@ ignore = E203, E266, E501, W503
 max-line-length = 80
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
+
+[coverage:report]
+exclude_lines =
+    raise NotImplementedError
