Add certificate auth

--- a/.vault.cert.yml
+++ b/.vault.cert.yml
@@ -2,5 +2,5 @@
 url: https://localhost:8443
 base_path: secretkvv1/
 ca_bundle: dev_docker_config/certs/server-chain.crt
-priv_cert: dev_docker_config/certs/client.key
-pub_cert: dev_docker_config/certs/client.crt
+login_cert: dev_docker_config/certs/client.crt
+login_cert_key: dev_docker_config/certs/client.key
