--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 name = vault-cli
 description = CLI tool for hashicorp vault
 version = 0.7.0.dev0
-author = ylachiver
-author_email = yann.lachiver@people-doc.com
+author = PeopleDoc
+author_email = joachim.jablon@people-doc.com
 url = https://github.com/peopledoc/vault-cli
 long_description = file: README.md
 long_description_content_type = text/markdown
