Fix deprectation warning in pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,7 @@ addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report 
 testpaths =
     tests/unit
     tests/integration
+junit_family=xunit2
 
 [mypy-backports.functools_lru_cache.*,setuptools.*,urllib3.*,hvac.*,pytest.*]
 ignore_missing_imports = True
