Add doc tooling

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-*.egg-info
-/.pytest_cache/
 __pycache__/
+.coverage
+.mypy_cache
+.pytest_cache/
+.tox
+*.egg-info
+*.pyc
 build
 dist
-.coverage
+docs/_build
 htmlcov
-.tox
-*.pyc
-/vault.yml
-/.mypy_cache
+vault.yml
