--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,15 @@ lint =
     black
     isort
 
+docs =
+    doc8
+    sphinx
+    sphinx_autodoc_typehints
+    sphinxcontrib-programoutput
+
+docs_spelling =
+    sphinxcontrib-spelling
+
 [isort]
 multi_line_output=3
 include_trailing_comma=True
@@ -84,3 +93,7 @@ select = B,C,E,F,W,T4,B9
 [coverage:report]
 exclude_lines =
     raise NotImplementedError
+
+[doc8]
+max-line-length=88
+ignore-path=docs/_build
