--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py36,py37}-{integration,unit}-tests,check-lint
+    {py36,py37}-{integration,unit}-tests,check-lint,docs
 
 [testenv]
 usedevelop = True
@@ -30,3 +30,26 @@ extras =
 commands =
     isort -y
     black .
+
+
+[testenv:docs]
+extras =
+    docs
+commands =
+    sphinx-build -EW docs docs/_build/html {posargs}
+    doc8 docs
+
+[testenv:docs-spelling]
+extras =
+    async
+    docs
+    docs_spelling
+whitelist_externals =
+    sort
+commands =
+    sphinx-build -EW -b spelling docs docs/_build/html {posargs}
+    doc8 docs
+    # wordlist should be sorted to avoid duplicates
+    # If this line breaks, fix with:
+    # sort -bdfi docs/spelling_wordlist.txt -o docs/spelling_wordlist.txt
+    sort -cbdfi docs/spelling_wordlist.txt
