--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-__pycache__/
 .coverage
-.mypy_cache
+.mypy_cache/
 .pytest_cache/
-.tox
+.tox/
 *.egg-info
 *.pyc
-build
-dist
+*/__pycache__
+build/
+dist/
 docs/_build
-htmlcov
+htmlcov/
 vault.yml
