--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
+    vault-cli = vault_cli.cli:main
     vault = vault_cli.cli:main
 
 [options.extras_require]
