Fix package description, broken on PyPI

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,7 @@ version = 1.4.0.dev0
 author = PeopleDoc
 author_email = joachim.jablon@people-doc.com
 url = https://github.com/peopledoc/vault-cli
-long_description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
 keywords = hashicorp vault cli
 license = Apache Software License
 classifiers =
