--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ ignore_errors=true
 commands =
     mypy vault_cli
     flake8 .
-    isort --check-only
+    isort --check .
     black --check .
 
 [testenv:format]
@@ -28,7 +28,7 @@ extras =
     dev
     test
 commands =
-    isort -y
+    isort .
     black .
 
 [testenv:docs]
