--- a/setup.cfg
+++ b/setup.cfg
@@ -67,12 +67,7 @@ docs_spelling =
     sphinxcontrib-spelling
 
 [isort]
-multi_line_output=3
-include_trailing_comma=True
-force_grid_wrap=0
-use_parentheses=True
-line_length=88
-not_skip = __init__.py
+profile = black
 
 [tool:pytest]
 addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv
