Travis to GH Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py36,py37}-{integration,unit}-tests,check-lint,docs
+    {py36,py37,py38}-tests,check-lint,docs
 
 [testenv]
 usedevelop = True
@@ -8,8 +8,7 @@ extras =
     test
 commands =
     pip freeze -l
-    unit-tests: pytest tests/unit
-    integration-tests: pytest tests/integration
+    pytest
 
 [testenv:check-lint]
 extras =
@@ -22,7 +21,6 @@ commands =
     isort --check-only
     black --check .
 
-
 [testenv:format]
 extras =
     dev
@@ -30,7 +28,6 @@ extras =
 commands =
     isort -y
     black .
-
 
 [testenv:docs]
 extras =
