--- a/vault.token.yml
+++ b/vault.token.yml
@@ -1,5 +1,5 @@
 ---
 url: https://localhost:8443
 base_path: secretkvv1/
-ca_bundle: dev_docker_config/certs/server-chain.crt
+ca_bundle: server-chain.crt
 token: some-token
