--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,6 @@
 [metadata]
 name = vault-cli
 description = CLI tool for hashicorp vault
-version = 1.5.0.dev0
 author = PeopleDoc
 author_email = joachim.jablon@people-doc.com
 url = https://github.com/peopledoc/vault-cli
@@ -43,6 +42,7 @@ dev =
     twine
     black
     isort
+    build
 
 test =
     pytest
