--- a/setup.cfg
+++ b/setup.cfg
@@ -76,7 +76,7 @@ testpaths =
     tests/integration
 junit_family=xunit2
 
-[mypy-backports.functools_lru_cache.*,setuptools.*,urllib3.*,hvac.*,pytest.*]
+[mypy-backports.functools_lru_cache.*,setuptools.*,pytest.*]
 ignore_missing_imports = True
 
 [flake8]
