--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
     Click>=7.0
     pyyaml>=5.3.1
     jinja2
-    hvac
+    hvac<0.10.12  # Temporary fix for #191
 
 [options.entry_points]
 console_scripts =
