--- a/vault.userpass.yml
+++ b/vault.userpass.yml
@@ -1,6 +1,6 @@
 ---
-base_path: secretkvv1/
-ca_bundle: dev_docker_config/certs/server-chain.crt
 url: https://localhost:8443
+base_path: secretkvv1/
+ca_bundle: server-chain.crt
 username: userpass-login
 password: userpass-pass
