--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,10 @@ lint =
     flake8
     black
     isort
+    types-PyYAML
+    types-requests
+    types-setuptools
+    types-toml
 
 docs =
     doc8
