Switching author email to community

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = vault-cli
 description = CLI tool for hashicorp vault
 author = PeopleDoc
-author_email = joachim.jablon@people-doc.com
+author_email = peopledoc-python@ukg.com
 url = https://github.com/peopledoc/vault-cli
 long_description = file: README.rst
 keywords = hashicorp vault cli
